<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_event_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/viewTextCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/create_event_text"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/title_text"
        android:layout_width="345dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title_text"
        android:inputType="textPersonName"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTextCreate" />

    <EditText
        android:id="@+id/where_text"
        android:layout_width="345dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/where_text"
        android:inputType="textPersonName"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <Button
        android:id="@+id/button_day"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button_shape"
        android:text="@string/button_select_day"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_hour"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/where_text" />

    <Button
        android:id="@+id/button_hour"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_button_shape"
        android:text="@string/button_select_hour"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_day"
        app:layout_constraintTop_toTopOf="@+id/button_day" />

    <EditText
        android:id="@+id/description_text"
        android:layout_width="345dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/description_text"
        android:inputType="textPersonName"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_day" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:background="@drawable/rounded_button_shape"
        android:text="@string/button_add_image"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_selector"
        app:layout_constraintEnd_toEndOf="@+id/description_text"
        app:layout_constraintStart_toStartOf="@+id/image_selector"
        app:layout_constraintTop_toTopOf="@+id/image_selector" />

    <Button
        android:id="@+id/button_add_event"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_button_shape"
        android:text="@string/button_add_event"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_selector" />

    <ImageView
        android:id="@+id/image_selector"
        android:layout_width="208dp"
        android:layout_height="149dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        app:srcCompat="@drawable/ic_launcher_background" />

</androidx.constraintlayout.widget.ConstraintLayout>