<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/event_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/viewTextCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="@string/edit_event_text"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/title_text"
        android:layout_width="345dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title_text"
        android:textSize="17sp"
        android:hint="@string/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTextCreate" />

    <EditText
        android:id="@+id/where_text"
        android:layout_width="349dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:text="@string/where_text"
        android:hint="@string/where_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <Button
        android:id="@+id/button_day"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/button_select_day"
        android:background="@drawable/btn_event_time"
        android:textColor="@drawable/btn_letr"
        app:layout_constraintEnd_toStartOf="@+id/button_hour"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/where_text" />

    <Button
        android:id="@+id/button_hour"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/btn_event_time"
        android:textColor="@drawable/btn_letr"
        android:text="@string/button_select_hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/where_text" />

    <EditText
        android:id="@+id/description_text"
        android:layout_width="338dp"
        android:layout_height="79dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:text="@string/description_text"
        android:hint="@string/description_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_day" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/btn_event_bottom"
        android:text="@string/button_add_image"
        android:textColor="@drawable/btn_letr"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/image_selector"
        app:layout_constraintTop_toBottomOf="@+id/description_text" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_event_bottom"
        android:text="@string/button_edit_event"
        android:textColor="@drawable/btn_letr"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_selector"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_selector"
        android:layout_width="208dp"
        android:layout_height="149dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        android:contentDescription="@string/description_text"
        app:srcCompat="@drawable/event_add" />

</androidx.constraintlayout.widget.ConstraintLayout>