<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/event_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_secondary"
        android:layout_width="412dp"
        android:layout_height="56dp"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/viewTextCreate"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/create_event_text"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="345dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title_text"
        android:textSize="17sp"
        android:hint="@string/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTextCreate" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="349dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:text="@string/where_text"
        android:hint="@string/where_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button_day"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/button_select_day"
        android:background="@drawable/btn_event_time"
        android:textColor="@drawable/btn_letr"
        app:layout_constraintEnd_toStartOf="@+id/button_hour"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button_hour"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/btn_event_time"
        android:textColor="@drawable/btn_letr"
        android:text="@string/button_select_hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="338dp"
        android:layout_height="79dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:text="@string/description_text"
        android:hint="@string/description_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_day" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="341dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:text="@string/what_bring_text"
        android:hint="@string/what_bring_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="340dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:text="@string/much_cost"
        android:hint="@string/much_cost"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/button_add_image"
        android:textSize="17sp"
        android:background="@drawable/btn_event_bottom"
        android:textColor="@drawable/btn_letr"
        app:layout_constraintEnd_toStartOf="@+id/button_create"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/button_add_event"
        android:background="@drawable/btn_event_bottom"
        android:textSize="17sp"
        android:textColor="@drawable/btn_letr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

</androidx.constraintlayout.widget.ConstraintLayout>